tests/type-errors/no_update_asset_key.arl
archetype bad_at_unknown_label

asset myasset {
  id : string;
}

action anaction (k : string) {
  effect {
    myasset.get(k).id := "mykey"
  }
}
